# adeeptrobot

./: CMakeLists.txt  README.txt  package.xml
config/: base.yaml  endEffector.yaml  joint1.yaml  joint2.yaml
launch/: config.rviz  frames.gv  gazebo.launch  rviz.launch
src/: controller.py
urdf/: adeeptrobot.xacro  joints_links_macro.xacro
