<?xml version="1.0"?>
<package format="2">

  <name>adeeptrobot</name>
  <version>0.0.1</version>
  <description>My Thesis Project in Cybernetic Engineering (University of Palermo)</description>

  <author email="romano.massimo.uni@gmail.com">Massimo Romano</author>
  <maintainer email="romano.massimo.uni@gmail.com">Massimo Romano</maintainer>
  <url type="website">https://www.linkedin.com/in/massimo-romano-01/</url>
   
  <!-- Link to see this license: https://tldrlegal.com/license/creative-commons-attribution-4.0-international-(cc-by-4) -->
  <license>Creative Commons Attribution 4.0 International</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  
</package>
